<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="moe.kotori.shiny.pref.SettingsActivity$AccountPreferenceFragment"
        android:icon="@drawable/ic_account_black_24dp"
        android:title="@string/account" />

    <header
        android:fragment="moe.kotori.shiny.pref.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="moe.kotori.shiny.pref.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/more" />

</preference-headers>
